Bug 563927 - fixed juni tests
fixed junit test, updated tycho-version to 1.6 updated pom.xml setup

Change-Id: I5587fa4061f97fef5b854c49ce3c75ed066d9730
Signed-off-by: Ralph Soika <ralph.soika@imixs.com>